--- a/Hubo.Web/Web.config
+++ b/Hubo.Web/Web.config
@@ -30,7 +30,8 @@
     <add key="ExternalAuth.Google.ClientSecret" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=Server2;Initial Catalog=HuboDbDev;User Id=sa;Password=TrioTech_2010" providerName="System.Data.SqlClient" />
+    <!-- <add name="Default" connectionString="Server=Server2;Initial Catalog=HuboDbDev;User Id=sa;Password=TrioTech_2010" providerName="System.Data.SqlClient" /> -->
+    <add name="Default" connectionString="Server=TRIOTECH-5\SQLEXPRESS;Initial Catalog=HuboDbDev;User Id=sa;Password=TrioTech_2010" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -48,7 +49,7 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.1" />
-    <customErrors mode="On" />
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
