--- a/Hubo.EntityFramework/Hubo.EntityFramework.csproj
+++ b/Hubo.EntityFramework/Hubo.EntityFramework.csproj
@@ -113,81 +113,9 @@
     <Compile Include="EntityFramework\Repositories\IDriverRepository.cs" />
     <Compile Include="EntityFramework\Repositories\IVehicleRepository.cs" />
     <Compile Include="EntityFramework\VehicleRepository.cs" />
-    <Compile Include="Migrations\201506210746108_AbpZero_Initial.cs" />
-    <Compile Include="Migrations\201506210746108_AbpZero_Initial.Designer.cs">
-      <DependentUpon>201506210746108_AbpZero_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509081207232_UpdateModuleZeroTo_0_6_9.cs" />
-    <Compile Include="Migrations\201509081207232_UpdateModuleZeroTo_0_6_9.Designer.cs">
-      <DependentUpon>201509081207232_UpdateModuleZeroTo_0_6_9.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509290947427_Upgrade_To_ModuleZero_0_7_1.cs" />
-    <Compile Include="Migrations\201509290947427_Upgrade_To_ModuleZero_0_7_1.Designer.cs">
-      <DependentUpon>201509290947427_Upgrade_To_ModuleZero_0_7_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201510141938232_Upgrade_Abp_And_Module_Zero_To_0_7_3.cs" />
-    <Compile Include="Migrations\201510141938232_Upgrade_Abp_And_Module_Zero_To_0_7_3.Designer.cs">
-      <DependentUpon>201510141938232_Upgrade_Abp_And_Module_Zero_To_0_7_3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201511091457384_Upgrade_To_ModuleZero_0_7_4.cs" />
-    <Compile Include="Migrations\201511091457384_Upgrade_To_ModuleZero_0_7_4.Designer.cs">
-      <DependentUpon>201511091457384_Upgrade_To_ModuleZero_0_7_4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201512241146128_Upgrade_To_Module_Zero_0_7_6.cs" />
-    <Compile Include="Migrations\201512241146128_Upgrade_To_Module_Zero_0_7_6.Designer.cs">
-      <DependentUpon>201512241146128_Upgrade_To_Module_Zero_0_7_6.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201512241148372_Created_Indexes.cs" />
-    <Compile Include="Migrations\201512241148372_Created_Indexes.Designer.cs">
-      <DependentUpon>201512241148372_Created_Indexes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201601032115057_Upgraded_Module_Zero_0_7_7.cs" />
-    <Compile Include="Migrations\201601032115057_Upgraded_Module_Zero_0_7_7.Designer.cs">
-      <DependentUpon>201601032115057_Upgraded_Module_Zero_0_7_7.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201602161446590_Upgrade_Abp_And_Module_Zero_To_0_8_1.cs" />
-    <Compile Include="Migrations\201602161446590_Upgrade_Abp_And_Module_Zero_To_0_8_1.Designer.cs">
-      <DependentUpon>201602161446590_Upgrade_Abp_And_Module_Zero_To_0_8_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201603021000202_Upgrade_Abp_And_Module_Zero_To_0_8_2.cs" />
-    <Compile Include="Migrations\201603021000202_Upgrade_Abp_And_Module_Zero_To_0_8_2.Designer.cs">
-      <DependentUpon>201603021000202_Upgrade_Abp_And_Module_Zero_To_0_8_2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201603220639423_Upgraded_To_Module_Zero_0_8_3.cs" />
-    <Compile Include="Migrations\201603220639423_Upgraded_To_Module_Zero_0_8_3.Designer.cs">
-      <DependentUpon>201603220639423_Upgraded_To_Module_Zero_0_8_3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604271412090_Upgraded_To_V0_9.cs" />
-    <Compile Include="Migrations\201604271412090_Upgraded_To_V0_9.Designer.cs">
-      <DependentUpon>201604271412090_Upgraded_To_V0_9.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201604281237494_Added_ConnectionString_To_Tenant.cs" />
-    <Compile Include="Migrations\201604281237494_Added_ConnectionString_To_Tenant.Designer.cs">
-      <DependentUpon>201604281237494_Added_ConnectionString_To_Tenant.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201605021116147_Created_Table_AbpUserAccounts.cs" />
-    <Compile Include="Migrations\201605021116147_Created_Table_AbpUserAccounts.Designer.cs">
-      <DependentUpon>201605021116147_Created_Table_AbpUserAccounts.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201605041151380_UserAccount_And_Notification_Changes.cs" />
-    <Compile Include="Migrations\201605041151380_UserAccount_And_Notification_Changes.Designer.cs">
-      <DependentUpon>201605041151380_UserAccount_And_Notification_Changes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612060426435_Drivers.cs" />
-    <Compile Include="Migrations\201612060426435_Drivers.Designer.cs">
-      <DependentUpon>201612060426435_Drivers.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612060451093_Drivers1.cs" />
-    <Compile Include="Migrations\201612060451093_Drivers1.Designer.cs">
-      <DependentUpon>201612060451093_Drivers1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612060452066_Vehicles.cs" />
-    <Compile Include="Migrations\201612060452066_Vehicles.Designer.cs">
-      <DependentUpon>201612060452066_Vehicles.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612130337415_Driver.cs" />
-    <Compile Include="Migrations\201612130337415_Driver.Designer.cs">
-      <DependentUpon>201612130337415_Driver.cs</DependentUpon>
+    <Compile Include="Migrations\201701160016566_initial.cs" />
+    <Compile Include="Migrations\201701160016566_initial.Designer.cs">
+      <DependentUpon>201701160016566_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -212,62 +140,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201506210746108_AbpZero_Initial.resx">
-      <DependentUpon>201506210746108_AbpZero_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509081207232_UpdateModuleZeroTo_0_6_9.resx">
-      <DependentUpon>201509081207232_UpdateModuleZeroTo_0_6_9.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509290947427_Upgrade_To_ModuleZero_0_7_1.resx">
-      <DependentUpon>201509290947427_Upgrade_To_ModuleZero_0_7_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201510141938232_Upgrade_Abp_And_Module_Zero_To_0_7_3.resx">
-      <DependentUpon>201510141938232_Upgrade_Abp_And_Module_Zero_To_0_7_3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201511091457384_Upgrade_To_ModuleZero_0_7_4.resx">
-      <DependentUpon>201511091457384_Upgrade_To_ModuleZero_0_7_4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201512241146128_Upgrade_To_Module_Zero_0_7_6.resx">
-      <DependentUpon>201512241146128_Upgrade_To_Module_Zero_0_7_6.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201512241148372_Created_Indexes.resx">
-      <DependentUpon>201512241148372_Created_Indexes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201601032115057_Upgraded_Module_Zero_0_7_7.resx">
-      <DependentUpon>201601032115057_Upgraded_Module_Zero_0_7_7.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201602161446590_Upgrade_Abp_And_Module_Zero_To_0_8_1.resx">
-      <DependentUpon>201602161446590_Upgrade_Abp_And_Module_Zero_To_0_8_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201603021000202_Upgrade_Abp_And_Module_Zero_To_0_8_2.resx">
-      <DependentUpon>201603021000202_Upgrade_Abp_And_Module_Zero_To_0_8_2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201603220639423_Upgraded_To_Module_Zero_0_8_3.resx">
-      <DependentUpon>201603220639423_Upgraded_To_Module_Zero_0_8_3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604271412090_Upgraded_To_V0_9.resx">
-      <DependentUpon>201604271412090_Upgraded_To_V0_9.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201604281237494_Added_ConnectionString_To_Tenant.resx">
-      <DependentUpon>201604281237494_Added_ConnectionString_To_Tenant.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201605021116147_Created_Table_AbpUserAccounts.resx">
-      <DependentUpon>201605021116147_Created_Table_AbpUserAccounts.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201605041151380_UserAccount_And_Notification_Changes.resx">
-      <DependentUpon>201605041151380_UserAccount_And_Notification_Changes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612060426435_Drivers.resx">
-      <DependentUpon>201612060426435_Drivers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612060451093_Drivers1.resx">
-      <DependentUpon>201612060451093_Drivers1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612060452066_Vehicles.resx">
-      <DependentUpon>201612060452066_Vehicles.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612130337415_Driver.resx">
-      <DependentUpon>201612130337415_Driver.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201701160016566_initial.resx">
+      <DependentUpon>201701160016566_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
