--- a/Hubo.Core/Hubo.Core.csproj
+++ b/Hubo.Core/Hubo.Core.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="Company.cs" />
     <Compile Include="Driver.cs" />
+    <Compile Include="DriverCompany.cs" />
     <Compile Include="HuboConsts.cs" />
     <Compile Include="HuboCoreModule.cs" />
     <Compile Include="Authorization\HuboAuthorizationProvider.cs" />
