--- a/Hubo.Application/Hubo.Application.csproj
+++ b/Hubo.Application/Hubo.Application.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\IRoleAppService.cs" />
     <Compile Include="Roles\Dto\UpdateRolePermissionsInput.cs" />
+    <Compile Include="Shifts\IShiftAppService.cs" />
+    <Compile Include="Shifts\ShiftAppService.cs" />
     <Compile Include="Users\Dto\CreateUserInput.cs" />
     <Compile Include="Users\IUserAppService.cs" />
     <Compile Include="Roles\RoleAppService.cs" />
