--- a/Hubo.Application/Hubo.Application.csproj
+++ b/Hubo.Application/Hubo.Application.csproj
@@ -104,9 +104,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Companies\CompanyAppService.cs" />
+    <Compile Include="Companies\DTo\CompanyOutput.cs" />
     <Compile Include="Companies\ICompanyAppService.cs" />
     <Compile Include="Drivers\DriverAppService.cs" />
     <Compile Include="Drivers\DTo\CreateDriverInput.cs" />
+    <Compile Include="Drivers\DTo\DriverOutput.cs" />
     <Compile Include="Drivers\IDriverAppService.cs" />
     <Compile Include="HuboApplicationModule.cs" />
     <Compile Include="HuboAppServiceBase.cs" />
@@ -131,6 +133,7 @@
     <Compile Include="Users\UserAppService.cs" />
     <Compile Include="Users\Dto\UserListDto.cs" />
     <Compile Include="Vehicles\Dto\CreateVehicleInput.cs" />
+    <Compile Include="Vehicles\Dto\VehicleOutput.cs" />
     <Compile Include="Vehicles\IVehicleAppService.cs" />
     <Compile Include="Vehicles\VehicleAppService.cs" />
   </ItemGroup>
@@ -148,9 +151,7 @@
       <Name>Hubo.EntityFramework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Companies\DTo\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
