--- a/Hubo.Application/Hubo.Application.csproj
+++ b/Hubo.Application/Hubo.Application.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\IRoleAppService.cs" />
     <Compile Include="Roles\Dto\UpdateRolePermissionsInput.cs" />
+    <Compile Include="Shifts\Dto\ShiftStartInput.cs" />
     <Compile Include="Shifts\IShiftAppService.cs" />
     <Compile Include="Shifts\ShiftAppService.cs" />
     <Compile Include="Users\Dto\CreateUserInput.cs" />
