--- a/Hubo.EntityFramework/Hubo.EntityFramework.csproj
+++ b/Hubo.EntityFramework/Hubo.EntityFramework.csproj
@@ -117,9 +117,13 @@
     <Compile Include="EntityFramework\Repositories\IVehicleRepository.cs" />
     <Compile Include="EntityFramework\ShiftRepository.cs" />
     <Compile Include="EntityFramework\VehicleRepository.cs" />
-    <Compile Include="Migrations\201701250130143_initial.cs" />
-    <Compile Include="Migrations\201701250130143_initial.Designer.cs">
-      <DependentUpon>201701250130143_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201701260423356_initial.cs" />
+    <Compile Include="Migrations\201701260423356_initial.Designer.cs">
+      <DependentUpon>201701260423356_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701260607071_shiftbreaknote.cs" />
+    <Compile Include="Migrations\201701260607071_shiftbreaknote.Designer.cs">
+      <DependentUpon>201701260607071_shiftbreaknote.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -144,8 +148,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201701250130143_initial.resx">
-      <DependentUpon>201701250130143_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201701260423356_initial.resx">
+      <DependentUpon>201701260423356_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701260607071_shiftbreaknote.resx">
+      <DependentUpon>201701260607071_shiftbreaknote.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
