--- a/Hubo.Core/Hubo.Core.csproj
+++ b/Hubo.Core/Hubo.Core.csproj
@@ -95,6 +95,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiRequestClasses\BreakEndRequest.cs" />
     <Compile Include="ApiRequestClasses\BreakStartRequest.cs" />
     <Compile Include="ApiRequestClasses\ShiftStartRequest.cs" />
     <Compile Include="ApiRequestClasses\ShiftStopRequest.cs" />
