--- a/Hubo.Core/Hubo.Core.csproj
+++ b/Hubo.Core/Hubo.Core.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Company.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="DriverCompany.cs" />
+    <Compile Include="DrivingShift.cs" />
+    <Compile Include="GeoData.cs" />
     <Compile Include="HuboConsts.cs" />
     <Compile Include="HuboCoreModule.cs" />
     <Compile Include="Authorization\HuboAuthorizationProvider.cs" />
@@ -120,8 +122,7 @@
     <Compile Include="Authorization\Roles\Role.cs" />
     <Compile Include="Authorization\Roles\RoleManager.cs" />
     <Compile Include="Authorization\Roles\RoleStore.cs" />
-    <Compile Include="Shift.cs" />
-    <Compile Include="ShiftBreakNote.cs" />
+    <Compile Include="WorkShift.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Users\UserManager.cs" />
     <Compile Include="Users\UserStore.cs" />
