--- a/Hubo.EntityFramework/Hubo.EntityFramework.csproj
+++ b/Hubo.EntityFramework/Hubo.EntityFramework.csproj
@@ -125,6 +125,14 @@
     <Compile Include="Migrations\201702010041367_driver.Designer.cs">
       <DependentUpon>201702010041367_driver.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702010201338_workshift.cs" />
+    <Compile Include="Migrations\201702010201338_workshift.Designer.cs">
+      <DependentUpon>201702010201338_workshift.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702010203149_workshift1.cs" />
+    <Compile Include="Migrations\201702010203149_workshift1.Designer.cs">
+      <DependentUpon>201702010203149_workshift1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="HuboDataModule.cs" />
@@ -153,6 +161,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702010041367_driver.resx">
       <DependentUpon>201702010041367_driver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702010201338_workshift.resx">
+      <DependentUpon>201702010201338_workshift.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702010203149_workshift1.resx">
+      <DependentUpon>201702010203149_workshift1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
