Get breaks implemented, NOTE: Starting shifts, ending shifts starting breaks and ending breaks all have to be reworked now due to DB changes, only cemented methods are the Get's that have been implemented

--- a/Hubo.Application/Hubo.Application.csproj
+++ b/Hubo.Application/Hubo.Application.csproj
@@ -103,6 +103,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Breaks\BreakAppService.cs" />
+    <Compile Include="Breaks\Dto\BreakDto.cs" />
+    <Compile Include="Breaks\IBreakAppService.cs" />
     <Compile Include="Companies\CompanyAppService.cs" />
     <Compile Include="Companies\DTo\CompanyOutput.cs" />
     <Compile Include="Companies\ICompanyAppService.cs" />
