--- a/Hubo.WebApi/Hubo.WebApi.csproj
+++ b/Hubo.WebApi/Hubo.WebApi.csproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <Compile Include="Api\Controllers\BreakController.cs" />
     <Compile Include="Api\Controllers\CompanyController.cs" />
+    <Compile Include="Api\Controllers\NoteController.cs" />
     <Compile Include="Api\Controllers\RegistrationController.cs" />
     <Compile Include="Api\Controllers\ShiftController.cs" />
     <Compile Include="Api\Controllers\VehiclesController.cs" />
