--- a/Hubo.EntityFramework/Hubo.EntityFramework.csproj
+++ b/Hubo.EntityFramework/Hubo.EntityFramework.csproj
@@ -120,21 +120,13 @@
     <Compile Include="EntityFramework\Repositories\IVehicleRepository.cs" />
     <Compile Include="EntityFramework\WorkShiftRepository.cs" />
     <Compile Include="EntityFramework\VehicleRepository.cs" />
-    <Compile Include="Migrations\201702062357305_initial.cs" />
-    <Compile Include="Migrations\201702062357305_initial.Designer.cs">
-      <DependentUpon>201702062357305_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201702082043387_initial.cs" />
+    <Compile Include="Migrations\201702082043387_initial.Designer.cs">
+      <DependentUpon>201702082043387_initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201702072144561_note.cs" />
-    <Compile Include="Migrations\201702072144561_note.Designer.cs">
-      <DependentUpon>201702072144561_note.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702080022449_break.cs" />
-    <Compile Include="Migrations\201702080022449_break.Designer.cs">
-      <DependentUpon>201702080022449_break.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201702080335210_driver.cs" />
-    <Compile Include="Migrations\201702080335210_driver.Designer.cs">
-      <DependentUpon>201702080335210_driver.cs</DependentUpon>
+    <Compile Include="Migrations\201702082056566_licence.cs" />
+    <Compile Include="Migrations\201702082056566_licence.Designer.cs">
+      <DependentUpon>201702082056566_licence.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -159,17 +151,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201702062357305_initial.resx">
-      <DependentUpon>201702062357305_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201702082043387_initial.resx">
+      <DependentUpon>201702082043387_initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702072144561_note.resx">
-      <DependentUpon>201702072144561_note.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702080022449_break.resx">
-      <DependentUpon>201702080022449_break.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201702080335210_driver.resx">
-      <DependentUpon>201702080335210_driver.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201702082056566_licence.resx">
+      <DependentUpon>201702082056566_licence.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
