--- a/Hubo.EntityFramework/Hubo.EntityFramework.csproj
+++ b/Hubo.EntityFramework/Hubo.EntityFramework.csproj
@@ -128,6 +128,10 @@
     <Compile Include="Migrations\201702082056566_licence.Designer.cs">
       <DependentUpon>201702082056566_licence.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702090332366_break.cs" />
+    <Compile Include="Migrations\201702090332366_break.Designer.cs">
+      <DependentUpon>201702090332366_break.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="HuboDataModule.cs" />
@@ -156,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702082056566_licence.resx">
       <DependentUpon>201702082056566_licence.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702090332366_break.resx">
+      <DependentUpon>201702090332366_break.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
